k8s/issue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issue-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: issue
  template:
    metadata:
      labels:
        app: issue
    spec:
      containers:
        - name: issue
          image: arnav0204/issuance-service:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: issue-service
spec:
  selector:
    app: issue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
