k8s/verify-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verify-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: verify
  template:
    metadata:
      labels:
        app: verify
    spec:
      containers:
        - name: verify
          image: arnav0204/verification-service:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: verify-service
spec:
  selector:
    app: verify
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
